--- a/draw-shape/editor.html
+++ b/draw-shape/editor.html
@@ -13,131 +13,61 @@
         Page header
     </header>
     <div class="side-bar">
-        <div class="editor" id="editor-shape1">
+        <div class="editor" >
             <div class="left">
                 <div class="input-field">
                     <label>W</label>
-                    <input type="number" id="width1" name="width" />
+                    <input type="number" id="width" name="width" />
                 </div>
                 <div class="input-field">
                     <label>H</label>
-                    <input type="number" id="height1" name="height" />
+                    <input type="number" id="height" name="height" />
                 </div>
                 <div class="input-field">
                     <label>Stroke</label>
-                    <input type="text" id="stroke1" name="stroke" />
+                    <input type="text" id="stroke" name="stroke" />
                 </div>
                 <a href="#" class="btn">save</a>
             </div>
             <div class="right">
                 <div class="input-field">
                     <label>X</label>
-                    <input type="number" id="posX1" name="posX" />
+                    <input type="number" id="posX" name="posX" />
                 </div>
                 <div class="input-field">
                     <label>Y</label>
-                    <input type="number" id="posY1" name="posY" />
+                    <input type="number" id="posY" name="posY" />
                 </div>
                 <div class="input-field">
                     <label>Fill</label>
-                    <input type="text" id="fill1" name="fill" />
+                    <input type="text" id="fill" name="fill" />
                 </div>
                 <a href="#" class="btn" onclick="savePDF()">export</a>
             </div>
         </div>
-        <div class="editor" id="editor-shape2" style="display: none;">
-            <div class="left">
-                <div class="input-field">
-                    <label>W</label>
-                    <input type="number" id="width2" name="width" />
-                </div>
-                <div class="input-field">
-                    <label>H</label>
-                    <input type="number" id="height2" name="height" />
-                </div>
-                <div class="input-field">
-                    <label>Stroke</label>
-                    <input type="text" id="stroke2" name="stroke" />
-                </div>
-                <a href="#" class="btn">save</a>
-            </div>
-            <div class="right">
-                <div class="input-field">
-                    <label>X</label>
-                    <input type="number" id="posX2" name="posX" />
-                </div>
-                <div class="input-field">
-                    <label>Y</label>
-                    <input type="number" id="posY2" name="posY" />
-                </div>
-                <div class="input-field">
-                    <label>Fill</label>
-                    <input type="text" id="fill2" name="fill" />
-                </div>
-                <a href="#" class="btn" onclick="savePDF()">export</a>
-            </div>
+        <div class="wrapper">
+            <a onclick="clearLayer()" href="#" class="btn">clear</a>
         </div>
-        <div class="editor" id="editor-shape3" style="display: none;">
-            <div class="left">
-                <div class="input-field">
-                    <label>W</label>
-                    <input type="number" id="width3" name="width" />
-                </div>
-                <div class="input-field">
-                    <label>H</label>
-                    <input type="number" id="height3" name="height" />
-                </div>
-                <div class="input-field">
-                    <label>Stroke</label>
-                    <input type="text" id="stroke3" name="stroke" />
-                </div>
-                <a href="#" class="btn">save</a>
-            </div>
-            <div class="right">
-                <div class="input-field">
-                    <label>X</label>
-                    <input type="number" id="posX3" name="posX" />
-                </div>
-                <div class="input-field">
-                    <label>Y</label>
-                    <input type="number" id="posY3" name="posY" />
-                </div>
-                <div class="input-field">
-                    <label>Fill</label>
-                    <input type="text" id="fill3" name="fill" />
-                </div>
-                <a href="#" class="btn" onclick="savePDF()">export</a>
-            </div>
-        </div>
+        
         <div id="components">
             <p>component</p>
-            <div id="comp1" class="comp" draggable="true">
+            <div id="comp1" onclick="createModel(1)" class="comp" draggable="true">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/94/LetterH.svg/1200px-LetterH.svg.png"
                     alt="h">
-                <p>component</p>
+                <p>component 1</p>
             </div>
-            <div id="comp1" class="comp" draggable="true">
+            <div id="comp1" onclick="createModel(2)" class="comp" draggable="true">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/94/LetterH.svg/1200px-LetterH.svg.png"
                     alt="h">
-                <p>component</p>
-            </div>
-            <div id="comp1" class="comp" draggable="true">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/94/LetterH.svg/1200px-LetterH.svg.png"
-                    alt="h">
-                <p>component</p>
-            </div>
-            <div id="comp1" class="comp">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/94/LetterH.svg/1200px-LetterH.svg.png"
-                    alt="h">
-                <p>component</p>
+                <p>component 2</p>
             </div>
         </div>
     </div>
 
     <div id="container">
 
-    </div> 
-    
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/konva@7.0.3/konva.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
