add scroll animation to index

--- a/doivo/news.html
+++ b/doivo/news.html
@@ -4,26 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
     <link rel="stylesheet" href="./OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="./OwlCarousel2-2.3.4/dist/assets/owl.theme.default.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="../library/wow/WOW/css/libs/animate.css" />
     <link rel="stylesheet" href="main.css">
-
     <title>Doi Vo</title>
+
 </head>
 
 <body class="bg-light">
-    <header id="page-header">
+    <header id="page-header" class="wow slideInLeft">
         <div class="container-md d-none pt-2 d-sm-flex justify-content-end">
             <button class="btn btn-sm btn-outline-primary btn-custom ">Khuyến Mãi</button>
-            <button class="btn btn-sm btn-outline-primary btn-custom mx-3">Đăng Nhận Đăng Ký</button>
+            <button class="btn btn-sm btn-outline-primary btn-custom mx-3">Đăng Nhập/Đăng Ký</button>
             <button class="btn btn-sm btn-outline-primary btn-custom ">Đăng Ký Tư Vấn</button>
         </div>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white mb-4 py-3 shadow-sm ">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white pt-3 mt-1 shadow-sm">
             <div class="container-md">
                 <a class="navbar-brand" href="#" style="font-size: 2rem;">Doivo</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -66,7 +64,7 @@
                 </div>
             </div>
         </nav>
-    </header>
+    </header>s
 
 
 
