--- a/daily/index.html
+++ b/daily/index.html
@@ -134,7 +134,7 @@
         </div>
     </header>
     <!-- hero slider -->
-    <section class="slider">
+    <section class="first_component">
         <div class="container row mx-auto mt-3 px-0 justify-content-between">
             <div class="left_side col-12 col-lg-8 ps-0 pe-1 h-100">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -433,7 +433,7 @@
                 <p id="flash_sale_count_down" class="mb-1 mx-3 px-3 rounded bg-light text-danger fs-6 "></p>
             </div>
             <div>
-                <img src="./icon/arrow-back.svg" style="transform: rotate(180deg);" />
+                <img src="./icon/arrow-back-dark.svg" style="transform: rotate(180deg);" />
             </div>
         </div>
         <div class="row py-3  px-1 product_list flex-nowrap gx-3">
@@ -555,11 +555,48 @@
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
     <script src="./main.js"></script>
+    
+    <footer id="page-footer" class="container-fluid py-5">
+        <div class="container-md text-light">
+
+            <div class="row">
+                <div class="col-12 col-md-4">
+                    <h3 class=" pb-3 mb-4 text-white">Chăm sóc khách hàng</h3>
+                    <p class=" mb-0 fs-5 text-white">1900 55 55 77</p>
+                    <p class="mt-0 fs-5 text-white">hotrovnpay@vnpay.vn</p>
+                </div>
+
+                <div class="col-12 col-md-4">
+                    <h3 class=" pb-3 mb-4 text-white">Chăm sóc khách hàng</h3>
+                    <p class=" mb-0 fs-5 text-white">1900 55 55 77</p>
+                    <p class="mt-0 fs-5 text-white">hotrovnpay@vnpay.vn</p>
+                </div>
+
+                <div class="col-12 col-md-4">
+                    <h3 class=" pb-3 mb-4 text-white">Chăm sóc khách hàng</h3>
+                    <p class=" mb-0 fs-5 text-white">1900 55 55 77</p>
+                    <p class=" mt-0 fs-5 text-white">hotrovnpay@vnpay.vn</p>
+                </div>
+            </div>
+            <div class="row my-5">
+                <div class="col-12 col-md-8 pe-3">
+                    <p class=" fs-3 fw-3 text-white">CÔNG TY TNHH PHẦN MỀM SẮC MÀU HÀ NỘI</p>
+                    <p class="fw-5 fs-4 text-white">Hà Nội</p>
+                    <p class="fs-5 text-white">Số 1 ngõ 15/55/6 An Dương Vương, Phường Phú Thượng, Quận Tây Hồ, Thành phố Hà Nội
+                    </p>
+                </div>
+                <div class="col-12 col-md-4 ps-3">
+                    <p class="fs-1 text-white">Liên Kết</p>
+                    <i class="fab fa-facebook text-white fs-1 pe-5"></i>
+                    <i class="fab fa-youtube fs-1 text-white"></i>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
 </body>
 
 </html>
 
 
-
-<p id="demo"></p>
